--- a/StewardClient/src/variables.scss
+++ b/StewardClient/src/variables.scss
@@ -1,4 +1,7 @@
-@import '../autocomplete-patch.scss';
+// TODO: These seem to still work implicitly despite not being explicitly imported?
+// TODO: Importing this causes any scss file including it to be horribly large (despite the files only containing variables and mixins)
+// TODO: Verify that compilation works when we standardize the colors to be based on the theme.
+// @import '../autocomplete-patch.scss';
 
 $primaryBlue: #337ab7;
 
