--- a/StewardClient/src/app/ticket-app/ticket-app.html
+++ b/StewardClient/src/app/ticket-app/ticket-app.html
@@ -13,7 +13,11 @@
           <h2 content-title>Quick Actions</h2>
           <section content-body>
             <div class="actions-div">
-              <button mat-raised-button color="primary" (click)="goToInventory()">
+              <button
+                mat-raised-button
+                color="primary"
+                (click)="goToInventory()"
+              >
                 Go To Inventory
               </button>
             </div>
