--- a/StewardClient/src/app/navbar-app/user-details/sunrise/credit-history/credit-history.component.html
+++ b/StewardClient/src/app/navbar-app/user-details/sunrise/credit-history/credit-history.component.html
@@ -43,7 +43,9 @@
         </ng-container>
         <ng-container matColumnDef="totalXp">
           <th mat-header-cell *matHeaderCellDef>Total XP</th>
-          <td mat-cell *matCellDef="let entry">{{ entry.totalXp | bignumber }}</td>
+          <td mat-cell *matCellDef="let entry">
+            {{ entry.totalXp | bignumber }}
+          </td>
         </ng-container>
         <tr mat-header-row *matHeaderRowDef="columnsToDisplay"></tr>
         <tr mat-row *matRowDef="let element; columns: columnsToDisplay"></tr>
